--- a/ColinCahill-leroyskagnetti/Final Project/borrow/Gemfile
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/Gemfile
@@ -30,6 +30,12 @@ gem 'pry', group: :development
 gem 'pry-rails', group: :development
 
 gem 'devise'
+gem 'carrierwave'
+gem 'better_errors', group: :development
+gem 'rails-footnotes', group: :development
+gem 'xray-rails', group: :development
+gem 'annotate', group: :development
+
 
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
