--- a/ColinCahill-leroyskagnetti/Final Project/borrow/Gemfile
+++ b/ColinCahill-leroyskagnetti/Final Project/borrow/Gemfile
@@ -36,6 +36,7 @@ gem 'rails-footnotes', group: :development
 gem 'xray-rails', group: :development
 gem 'annotate', group: :development
 gem 'better_errors', group: :development
+gem 'binding_of_caller'
 
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
